[package]
name = "typos-json-to-checkstyle"
version = "0.1.0"
edition = "2021"
authors = ["Gavin Mogan <rust@gavinmogan.com>"]
repository = "https://github.com/halkeye/typos-json-to-checkstyle"
license = "MIT"
exclude = ["sample.json"]

[[bin]]
name = "typos-checkstyle"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.59"
itertools = "0.10"
checkstyle_formatter = "1.0.2"    # checkstyle formatter.
